--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@types/react-redux": "^7.1.24",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.0.1",
+    "autoprefixer": "^10.4.11",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
   }
